# fw-nrfconnect-nrf-1

./: CMakeLists.txt  CODEOWNERS  Kconfig.nrf  aws_jobs_fota_temp.c  west.yml
applications/asset_tracker/: README.rst  lwm2m_carrier_overlay.conf  prj.conf  prj_thingy91_nrf9160ns.conf
applications/asset_tracker/src/: main.c
applications/multi_image_dfu_slots/: prj.conf
applications/multi_image_dfu_slots/child_image/: mcuboot.conf
applications/multi_image_dfu_slots/src/: main.c  nrf_custom_hooks.c
applications/serial_lte_modem/: overlay-native_tls.conf  prj.conf
applications/serial_lte_modem/boards/: nrf9160dk_nrf9160ns.overlay
applications/serial_lte_modem/doc/: slm_description.rst
applications/serial_lte_modem/src/: main.c
applications/test/: CMakeLists.txt  pm_static.yml  prj.conf
applications/test/child_image/: mcuboot.conf
applications/test/src/: nrf_custom_hooks.c
applications/test2/: prj.conf
applications/test2/child_image_dir/: mcuboot.conf
applications/thingy53/: CMakeLists.txt  prj.conf
applications/thingy53/child_image/mcuboot/: pm.yml  prj.conf
boards/arm/thingy91_nrf9160/: board_nonsecure.c
cmake/: mcuboot.cmake  multi_image.cmake  partition_manager.cmake
doc/nrf/: known_issues.rst  libraries.rst  links.txt  ug_nrf5340.rst  ug_nrf9160.rst
doc/nrf/includes/: aws_s3_bucket.txt
doc/nrf/releases/: release-notes-0.4.0.rst  release-notes-1.0.0.rst  release-notes-1.1.0.rst  release-notes-1.3.0.rst  release-notes-changelog.rst
doc/nrf/releases_and_maturity/: known_issues.rst
drivers/flash/: Kconfig
drivers/flash/flash_rpc/: CMakeLists.txt  flash_rpc_common.c  flash_rpc_controller.c  flash_rpc_host.c
drivers/gps/nrf9160_gps/: Kconfig  nrf9160_gps.c
ext/: CMakeLists.txt  Kconfig
ext/cjson/: Kconfig
ext/uzlib/: CMakeLists.txt  Kconfig
include/: aws_jobs.h  aws_jobs.rst  download_client.h  download_client.rst  flash_map_pm.h  fota_download.h  fota_download.rst  mgmt_mfu.h  modem_mgmt_stat.h  secure_services.h
include/dfu/: dfu_context_handler.h  dfu_context_handler.rst  dfu_target.h  dfu_target.rst  dfu_target_mcuboot.h  dfu_target_modem_full.h  dfu_target_stream.h  fmfu_fdev.h  fmfu_fdev.rst  mfu_ext.h  mfu_stream.h  pcd.h  pcd.rst
include/drivers/flash/: flash_rpc.h
include/mgmt/: mgmt_fmfu.h  mgmt_fmfu_stat.h
include/modem/: libmodem.h
include/net/: aws_fota.h  aws_fota.rst  aws_jobs.h  download_client.h  download_client.rst  fota_download.h  fota_download.rst
lib/: CMakeLists.txt  Kconfig
lib/agps/: Kconfig
lib/at_cmd/: Kconfig  at_cmd.c
lib/at_host/: Kconfig
lib/bsdlib/: CMakeLists.txt  bsdlib.c  bsdlib.ld  linker_bsdlib_secure.ld
lib/date_time/: Kconfig
lib/libmodem/: CMakeLists.txt  Kconfig  libmodem.c  nrf91_sockets.c  nrf_modem_os.c
lib/lte_link_control/: lte_lc.c
lib/modem_info/: Kconfig
lib/modem_key_mgmt/: Kconfig
lib/pdn_management/: Kconfig
modules/mcuboot/: CMakeLists.txt  Kconfig  spm.conf  tfm.conf
modules/mcuboot/hooks/: CMakeLists.txt
samples/: CMakeLists.txt
samples/bluetooth/central_and_peripheral_hr/: prj.conf
samples/bluetooth/peripheral_gatt_dm/: prj.conf
samples/bluetooth/peripheral_hr_coded/: prj.conf
samples/bluetooth/peripheral_uart/: prj.conf
samples/bootloader/: CMakeLists.txt  README.rst  pm.yml
samples/bootloader/src/: main.c
samples/crypto/aes_cbc/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/crypto/aes_cbc/src/: main.c
samples/crypto/aes_ccm/: prj.conf
samples/crypto/aes_ctr/: README.rst
samples/crypto/aes_gcm/: README.rst  prj.conf  sample.yaml
samples/crypto/chachapoly/: README.rst  sample.yaml
samples/crypto/ecdh/: CMakeLists.txt  README.rst  sample.yaml
samples/crypto/ecdsa/: README.rst  sample.yaml
samples/crypto/hkdf/: README.rst  prj.conf  sample.yaml
samples/crypto/hmac/: README.rst  sample.yaml
samples/crypto/psa_tls/eth-rtt-link-rs/: Cargo.toml  README.md
samples/crypto/psa_tls/eth-rtt-link-rs/src/: crc.rs  logs.rs  main.rs  options.rs  rtt.rs  slip.rs  tap.rs
samples/crypto/reproducer_sha_384/: CMakeLists.txt  prj.conf  sample.yaml
samples/crypto/rng/: README.rst  prj.conf  sample.yaml
samples/crypto/rsa/: README.rst  sample.yaml
samples/crypto/sha256/: README.rst  sample.yaml
samples/flash_ipc_rpc/cpuapp/: prj.conf
samples/flash_ipc_rpc/cpunet/: prj.conf
samples/nrf52840/smp_svr_external_flash/: CMakeLists.txt  mcuboot_prj.conf  overlay-bt.conf  overlay-serial.conf  prj.conf
samples/nrf5340/netboot/: CMakeLists.txt  Kconfig  README.rst  overlay-minimal-size.conf  pm.yml  prj.conf  sample.yaml
samples/nrf9160/agps/: prj.conf
samples/nrf9160/at_client/: prj.conf
samples/nrf9160/aws_fota/: Kconfig  README.rst  prj.conf
samples/nrf9160/mfu/: main.c  (+3 more)
scripts/: partition_manager.py  smp_serial.py
scripts/bootloader/: modem_update.py  provision.py
subsys/: CMakeLists.txt  Kconfig
subsys/bootloader/: CMakeLists.txt  Kconfig
subsys/bootloader/bl_crypto/: CMakeLists.txt  Kconfig  bl_crypto.c  bl_crypto_client.c  bl_crypto_oberon_hash.c  bl_crypto_oberon_rsa.c  bl_crypto_oberon_rsa_pss.c
subsys/bootloader/bl_validation/: bl_validation.c
subsys/bootloader/cmake/: sign.cmake
subsys/bootloader/fprotect/: fprotect_bprot.c
subsys/bootloader/fw_metadata/: fw_metadata.c
subsys/bootloader/image/: CMakeLists.txt
subsys/bootloader/include/: bootloader.ld  fw_metadata.h  linker.ld  mcuboot_image_header_parser.h
subsys/bootloader/mcuboot_image_header_parser/: CMakeLists.txt  mcuboot_image_header_parser.c
subsys/dfu/: CMakeLists.txt  Kconfig
subsys/fw_metadata/: Kconfig
subsys/partition_manager/: CMakeLists.txt  Kconfig  pm.yml.fat_file_system  pm.yml.libmodem  pm.yml.pcd  pm.yml.tfm  pm.yml.trustzone
subsys/pcd/: CMakeLists.txt  Kconfig
subsys/spm/: Kconfig  secure_services.c
tests/aws_fota_json/: prj.conf
tests/aws_jobs_json/: CMakeLists.txt
tests/subsys/dfu/mfu_ext/: CMakeLists.txt  GENERATED_NON_SECURE_PUBLIC_0.pem  prj.conf  testcase.yaml
tests/subsys/dfu/mfu_ext/boards/: native_posix.conf  nrf9160dk_nrf9160.conf
tests/subsys/dfu/mfu_ext/src/: main.c
(+250 files in other folders)
